<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="188dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:onClick="onClick"
        android:src="@drawable/logotecnored" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnregistrar"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:text="@string/str_btnregistrar" />

    <Button
        android:id="@+id/btnbuscar"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:text="@string/str_btnbuscar" />


    <Button
        android:id="@+id/btnlistar"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:text="@string/str_btnlistar" />

    <Button
        android:id="@+id/btnexportar"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:text="@string/str_btnexportar" />

</LinearLayout>