<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BuscarRelevamientoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/str_buscarRelevamiento"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:text="@string/str_nombre"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/bus_txtnombre"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:hint="@string/str_digiteNombre"
        android:inputType="text" />

    <Button
        android:id="@+id/bus_btnbuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:text="@string/str_btnbuscar" />


</LinearLayout>